[gd_scene load_steps=11 format=3 uid="uid://brmi3g83eksvo"]

[ext_resource type="Script" path="res://Source/UI.gd" id="1_2c54b"]
[ext_resource type="Texture2D" uid="uid://gmm01mps67iu" path="res://Asset/Icon/WeaponIcon0.jpg" id="2_7vf4g"]
[ext_resource type="Texture2D" uid="uid://d1hg23gwh4q82" path="res://Asset/Icon/SpecialIcon1.jpg" id="3_4on2o"]
[ext_resource type="Texture2D" uid="uid://banqcecntmlsn" path="res://Asset/Icon/IconCover.png" id="4_x0c3o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8oycn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qsccx"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 88

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3226"]
bg_color = Color(0.231373, 0.231373, 0.231373, 0.682353)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 88

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chdbx"]
bg_color = Color(0.415686, 0.415686, 0.415686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 88

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mms2m"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)
corner_radius_top_left = 88
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy330"]
bg_color = Color(0.937255, 0.772549, 0.266667, 1)
corner_radius_top_left = 88
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_2c54b")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Health" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 1.0
anchor_right = 0.01
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 532.0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="HealthBar" type="ProgressBar" parent="Control/Health"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 0, 1)
z_index = 1
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_8oycn")
theme_override_styles/fill = SubResource("StyleBoxFlat_qsccx")
max_value = 10.0
value = 5.0

[node name="DamageBar" type="ProgressBar" parent="Control/Health/HealthBar"]
unique_name_in_owner = true
z_index = -1
custom_minimum_size = Vector2(500, 23)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.860002)
theme_override_styles/background = SubResource("StyleBoxFlat_g3226")
theme_override_styles/fill = SubResource("StyleBoxFlat_chdbx")
max_value = 10.0
value = 8.0
show_percentage = false

[node name="DamageTimer" type="Timer" parent="Control/Health/HealthBar"]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="Label" type="Label" parent="Control/Health"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 4
text = "HP"
horizontal_alignment = 1

[node name="Special" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.97
anchor_right = 0.02
anchor_bottom = 0.97
offset_top = -27.0
offset_right = 500.0
grow_vertical = 0
scale = Vector2(0.999206, 0.997491)
theme_override_constants/separation = 10
alignment = 1

[node name="SpecialBar" type="ProgressBar" parent="Control/Special"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.839216)
z_index = 1
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.635294, 0.0470588, 0.831373, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_mms2m")
theme_override_styles/fill = SubResource("StyleBoxFlat_uy330")
max_value = 10.0
value = 5.0

[node name="Label" type="Label" parent="Control/Special"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 4
text = "SP
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0

[node name="WeaponSprite" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_7vf4g")

[node name="WeaponRecharge0" type="TextureProgressBar" parent="Control/HBoxContainer/WeaponSprite"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 60.0
fill_mode = 4
texture_under = ExtResource("4_x0c3o")
texture_progress = ExtResource("2_7vf4g")
tint_under = Color(0.6, 0.615686, 0.619608, 0.788235)
tint_progress = Color(1, 1, 1, 0.862745)

[node name="SpecialSprite" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_4on2o")

[node name="SpecialRecharge" type="TextureProgressBar" parent="Control/HBoxContainer/SpecialSprite"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 20.0
fill_mode = 4
texture_under = ExtResource("4_x0c3o")
texture_progress = ExtResource("3_4on2o")
tint_under = Color(0.6, 0.615686, 0.619608, 0.788235)
tint_progress = Color(1, 1, 1, 0.862745)

[connection signal="timeout" from="Control/Health/HealthBar/DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="Control/Health/HealthBar/DamageTimer" to="." method="_on_timer_timeout"]
